# pg3

./: .gitignore  .mise.toml  README.md  dune  dune-project  pg.opam
.github/workflows/: release.yml
lib/: api.ml  clipboard.ml  dune  magnet.ml  model.ml  update.ml  view.ml
